src/objects/Email_Count_Form__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Email Count Forms</relationshipLabel>
        <relationshipName>Email_Count_Forms</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <label>Annual Revenue</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Under $500,000</fullName>
                </value>
                <value>
                    <fullName>$500,000 To $999,999</fullName>
                </value>
                <value>
                    <fullName>$1 Million To $4.9 Million</fullName>
                </value>
                <value>
                    <fullName>$5 Million To $10 Million</fullName>
                </value>
                <value>
                    <fullName>More than $10 Million</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <label>Business</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Architect</fullName>
                </value>
                <value>
                    <fullName>Builder</fullName>
                </value>
                <value>
                    <fullName>Building Products Dealer/Distributor</fullName>
                </value>
                <value>
                    <fullName>Carpentry</fullName>
                </value>
                <value>
                    <fullName>Commercial Business/Facilities</fullName>
                </value>
                <value>
                    <fullName>Commercial Developer/Building Owner</fullName>
                </value>
                <value>
                    <fullName>Concrete Contracting</fullName>
                </value>
                <value>
                    <fullName>Consumer/Homeowner</fullName>
                </value>
                <value>
                    <fullName>Deck And Dock Builders</fullName>
                </value>
                <value>
                    <fullName>Designer/Lighting Designer</fullName>
                </value>
                <value>
                    <fullName>Drywall Contracting</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Electrical Contracting</fullName>
                </value>
                <value>
                    <fullName>Electronics Installers/Integrators</fullName>
                </value>
                <value>
                    <fullName>Engineer</fullName>
                </value>
                <value>
                    <fullName>Facilities Management</fullName>
                </value>
                <value>
                    <fullName>Financial/Legal Accounting Services</fullName>
                </value>
                <value>
                    <fullName>General Contractor</fullName>
                </value>
                <value>
                    <fullName>Government/Public Agencies</fullName>
                </value>
                <value>
                    <fullName>HVAC/Plumbing Contracting</fullName>
                </value>
                <value>
                    <fullName>Hardware/Tools Dealer/Distributor</fullName>
                </value>
                <value>
                    <fullName>Hwy/Heavy Construction</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Landscape Design/Build/Architect</fullName>
                </value>
                <value>
                    <fullName>Masonry Contractor</fullName>
                </value>
                <value>
                    <fullName>Multi-Family Property Developer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Painting Contracting</fullName>
                </value>
                <value>
                    <fullName>Pool Builder</fullName>
                </value>
                <value>
                    <fullName>Pool Distributor/Wholesaler</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geographic__c</fullName>
        <description>States or Zip Code</description>
        <inlineHelpText>States or Zip Code</inlineHelpText>
        <label>Geographic Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Title_s__c</fullName>
        <label>Job Title(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Architect, Designer, Engineer</fullName>
                </value>
                <value>
                    <fullName>Carpenter, Draftsman or Salesman</fullName>
                </value>
                <value>
                    <fullName>Construction Manager or Supervisor</fullName>
                </value>
                <value>
                    <fullName>Plumber</fullName>
                </value>
                <value>
                    <fullName>Electrician</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Sales and Marketing Manager</fullName>
                </value>
                <value>
                    <fullName>Other Management Personnel</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Owner, Partner, CEO, Director</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Notes__c</fullName>
        <label>Other Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Email Count Form</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Email_Count_Queue_Email_Count_Form</fullName>
        <filterScope>Queue</filterScope>
        <label>Email Count Queue</label>
        <queue>Email_Count_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>EC-{00000}</displayFormat>
        <label>Email Count Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Count Forms</pluralLabel>
    <recordTypes>
        <fullName>Email_Count_Record_Type</fullName>
        <active>true</active>
        <label>Email Count Record Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>